sistema de favoritos con Ridux

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,4 +1,30 @@
 .cards{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr; 
+ width: 100vw;
+ margin-left: 0vw;
+ 
+
+}
+
+.cards Card{
+  margin-left: auto;
+ margin-right: auto;
+}
+
+
+
+ @media screen and (min-width: 971px) and (max-width: 1200px) {
+ .cards{grid-template-columns: 1fr 1fr 1fr; }
+ 
+}
+
+@media screen and (min-width: 691px) and (max-width: 970px) {
+ .cards{grid-template-columns: 1fr 1fr; }
+ 
+}
+
+@media screen and (max-width: 690px) {
+ .cards{grid-template-columns: 1fr; }
+ 
 }
