--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,6 @@
 .card{
  border-radius: 20px; width: 300px; height: 400px; 
- position: relative; margin:8px; text-align: center;
+ position: relative; margin:8px; margin-bottom: 40px; text-align: center;
 }
 .cardInterno{
  border-radius: 20px; height: 100%;
