--- a/src/index.css
+++ b/src/index.css
@@ -61,8 +61,8 @@ h2 {
 .boton-principal {
   border-radius: 8px;
   border: 1px solid white;
-  padding: 4px 8px !important; 
-  height: 40px; 
+  padding: 1px 8px !important; 
+  height: 30px; 
   margin-right: 10px; 
   text-shadow: black 2px 2px 3px;
   font-size: 20px;
@@ -82,9 +82,25 @@ h2 {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input, select {
+  border-radius: 8px;
+  border: 1px solid black;
+  padding: 1px 8px !important; 
+  height: 30px; 
+  margin-right: 10px; 
+  text-shadow: black 2px 2px 3px;
+  font-size: 20px;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #0b93af !important;
+  color:white;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
 #root{
   min-height: 100vh; width: 100vw; max-width: 100vw !important;
-  background-color: rgba(0,0,0,0,0.7);
+  background-color: rgba(0,0,0,0.7) !important;
 }
 
 /* 
