--- a/src/views/Form/Form.module.css
+++ b/src/views/Form/Form.module.css
@@ -5,11 +5,21 @@
  position: relative;
  left: 50%;
  margin-left: -175px;
+ border: solid 2px white;
+ border-radius: 10px;
+ text-align: center;
 }
+label{font-weight: bold;}
 
 .warning{
  border:solid 2px red;
 }
 .danger{
  padding:0; margin:0; color:red;
+}
+
+.container{
+ height: 100vh;
+ display: flex;
+ align-items: center;
 }
