--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,7 +99,7 @@ input, select {
 }
 
 #root{
-  min-height: 100vh; width: 100vw; max-width: 100vw !important;
+  min-height: 100vh; width: 100%; max-width: 100vw !important;
   background-color: rgba(0,0,0,0.7) !important;
 }
 
