--- a/client/src/views/About/About.module.css
+++ b/client/src/views/About/About.module.css
@@ -1,7 +1,7 @@
 .container{
- height: 100vh;
+ min-height: 100%;
  display: flex;
- align-items: center;
+ align-items: center; justify-content: center;
 }
 
 .detail{
@@ -14,6 +14,55 @@
  flex: 1;
 }
 
-img{
- width: 300px; border-radius: 50%; border:solid 2px white;
+
+.card{
+ border-radius: 20px; width: 300px; height: 400px; 
+ position: relative; margin:8px; margin-bottom: 40px; text-align: center;
 }
+.cardInterno{ position: relative; font-size: 20px;
+ width: 80%; max-width: 600px; display: flex;
+ flex-wrap: wrap;
+ padding: 10px;
+
+ border-radius: 20px; 
+
+border: solid 4px SlateBlue; 
+background: LightSteelBlue; padding-bottom: 40px;
+}
+
+.cardImage{
+ position: relative;
+}
+.cardImageUp{position:absolute; top:-30px; left:0; z-index: 10; width: 100%; 
+}
+.cardImageUp img{border-radius: 50%; border:solid 4px white; width: 80%; height: auto; 
+box-shadow: black 2px 2px 10px;
+}
+.cardImage{border-radius: 50%; border:solid 4px white; width: 80%; height: auto; 
+box-shadow: black 2px 2px 10px;
+}
+.cardFranja{
+ background: SlateBlue; color: white; position:relative; 
+ top:-30px; height: 180px;
+
+}
+.cardTitle{
+ position: relative; top:-40px
+}
+.cardID{
+ position: absolute; 
+ bottom: -20px; 
+ left: -15px; 
+ background-color: SlateBlue;
+ color:white;
+ border-radius: 50%;
+ font-size: 30px; padding:5px 10px; border:solid 4px white;
+}
+.linkIcon{
+  cursor: pointer;
+}
+.linkIconRed{
+  cursor: pointer; color:red
+}
+
+.znDescription{ margin-top: 80px;}
