--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -1,15 +1,68 @@
 .container{
- height: 100vh;
- display: flex;
- align-items: center;
-}
-
-.detail{
- width: 80%; display: flex;
- flex-wrap: wrap;
- margin-left: 10%; padding: 10px;
- background-color: rgba(255,255,255,0.7); padding:20px; border-radius: 12px; border:solid 2px white
-}
-.col{
- flex: 1;
-}
+  min-height: 100%;
+  display: flex;
+  align-items: center; justify-content: center;
+ }
+ 
+ .detail{
+  width: 80%; display: flex;
+  flex-wrap: wrap;
+  margin-left: 10%; padding: 10px;
+  background-color: rgba(255,255,255,0.7); padding:20px; border-radius: 12px; border:solid 2px white
+ }
+ .col{
+  flex: 1;
+ }
+ 
+ 
+ .card{
+  border-radius: 20px; width: 300px; height: 400px; 
+  position: relative; margin:8px; margin-bottom: 40px; text-align: center;
+ }
+ .cardInterno{ position: relative; font-size: 20px;
+  width: 80%; max-width: 600px; display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+ 
+  border-radius: 20px; 
+ 
+ border: solid 4px SlateBlue; 
+ background: LightSteelBlue; padding-bottom: 40px;
+ }
+ 
+ .cardImage{
+  position: relative;
+ }
+ .cardImageUp{position:absolute; top:-30px; left:0; z-index: 10; width: 100%; 
+ }
+ .cardImageUp img{border-radius: 50%; border:solid 4px white; width: 80%; height: auto; 
+ box-shadow: black 2px 2px 10px;
+ }
+ .cardImage{border-radius: 50%; border:solid 4px white; width: 80%; height: auto; 
+ box-shadow: black 2px 2px 10px;
+ }
+ .cardFranja{
+  background: SlateBlue; color: white; position:relative; 
+  top:-30px; height: 180px;
+ 
+ }
+ .cardTitle{
+  position: relative; top:-40px
+ }
+ .cardID{
+  position: absolute; 
+  bottom: -20px; 
+  left: -15px; 
+  background-color: SlateBlue;
+  color:white;
+  border-radius: 50%;
+  font-size: 30px; padding:5px 10px; border:solid 4px white;
+ }
+ .linkIcon{
+   cursor: pointer;
+ }
+ .linkIconRed{
+   cursor: pointer; color:red
+ }
+ 
+ .znDescription{ margin-top: 80px;}
